# Medusa

./: .gitignore  .medusa.example  .pre-commit-config.yaml  Makefile  README.md  main.py  pycodestyle.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: instantiate.py  shell.py
examples/data/input_dir/: test.txt
medusa/: __init__.py  config.py  medusa.py  utils.py
medusa/algorithms/: __init__.py  aes.py  caesar.py  common.py  rsa.py  shift.py  vigenere.py
utests/: .medusa  test_algo.py  test_cli.py  test_dir.py  test_file.py
utests/data/input_dir/: other.txt
