[metadata]
name = Medusa
version = 1.0
author = Mina Pêcheux
author_email = mina.pecheux@gmail.com
description = A small encoding/decoding Python lib.
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: System
    Topic :: System :: Software Distribution
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
python_requires = >=3.6
packages = find:

[options.entry_points]
console_scripts =
    medusa = medusa.medusa:main
